图片模块：用户推荐-优化,缓存用户推荐结果